@@ -17,7 +17,11 @@
         id="collective.limitfilesizepanel.LimitFileSizePanel"
         title="collective.limitfilesizepanel: Manage limit file size settings"
         />
-  
+  <permission
+        id="collective.limitfilesizepanel.BypassLimitSize"
+        title="collective.limitfilesizepanel: Bypass limit size"
+        />
+
   <include package=".browser" />
 
   <genericsetup:registerProfile
